fix contact info spacing

--- a/src/styles/block/categories.scss
+++ b/src/styles/block/categories.scss
@@ -49,7 +49,6 @@
     align-items: center;
     justify-content: center;
 
-
     margin-top: $categories-button-margin-top;
     width: 100%;
     border: none;
@@ -68,7 +67,7 @@
     font-weight: 700;
 
     &:hover {
-      background-color: #1B2129;
+      background-color: #1b2129;
     }
 
     &:active {
