--- a/src/styles/block/contact.scss
+++ b/src/styles/block/contact.scss
@@ -33,7 +33,7 @@
     background-color: #1b2129;
     border-radius: $border-radius;
     color: white;
-        cursor:
+    cursor:
       url(/src/img/icon/Cursor-Mouse-Mice.png) 0 0,
       auto;
   }
@@ -52,12 +52,16 @@
     }
   }
 
+  &__item {
+    margin-top: 24px;
+  }
   &__title {
     font-size: 14px;
     line-height: 140%;
     color: #9393a3;
     letter-spacing: $letter-spacing;
     font-weight: 400;
+    padding-bottom: 8px;
   }
 
   &__value {
