--- a/src/styles/block/icon.scss
+++ b/src/styles/block/icon.scss
@@ -22,7 +22,7 @@ $icon-size-tablet: 32px;
     position: relative;
 
     &::after {
-      content: "+1 234 555-55-55";
+      content: '+1 234 555-55-55';
       position: absolute;
       right: 120%;
       top: 50%;
@@ -36,17 +36,18 @@ $icon-size-tablet: 32px;
       visibility: hidden;
       opacity: 0;
 
-      transition: opacity 0.3s ease, visibility 0.3s ease;
+      transition:
+        opacity 0.3s ease,
+        visibility 0.3s ease;
       z-index: 10;
 
       font-weight: 700;
       font-size: 12px;
       line-height: 16px;
       letter-spacing: 2px;
-
     }
-      &:hover::after {
 
+    &:hover::after {
       opacity: 1;
       visibility: visible;
     }
