--- a/src/styles/block/nav.scss
+++ b/src/styles/block/nav.scss
@@ -1,22 +1,21 @@
 @use '../utils' as *;
 
 .nav {
-
   &__link {
     color: inherit;
     font-size: 22px;
     line-height: 22px;
     font-weight: 700;
-       cursor:
+    cursor:
       url(/src/img/icon/Cursor-Mouse-Mice.png) 0 0,
       auto;
 
-      position: relative;
-      transition: opacity 0.2s ease;
+    position: relative;
+    transition: opacity 0.2s ease;
   }
 
   &__link:hover::after {
-    content: "";
+    content: '';
     position: absolute;
     bottom: -4px;
     left: 0;
@@ -35,4 +34,3 @@
     gap: $menu-list-gap;
   }
 }
-
